--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -53,6 +53,7 @@
     <dimen name="dp_110">110dp</dimen>
     <dimen name="dp_168">168dp</dimen>
     <dimen name="dp_180">180dp</dimen>
+    <dimen name="dp_200">200dp</dimen>
     <dimen name="dp_230">230dp</dimen>
 
     <!-- sp -->
