--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/about_us_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/viewBackground"
     android:clipToPadding="false"
-    android:paddingTop="@dimen/dp_26">
+    android:paddingTop="@dimen/dp_40">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="@dimen/dp_10">
+        android:orientation="vertical">
+
+        <com.cxz.wanandroid.widget.CircleImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_80"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/bg_logo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@mipmap/logo"
+            app:type="circle" />
 
         <TextView
             android:id="@+id/about_version"
@@ -21,7 +34,6 @@
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/dp_16"
             android:drawablePadding="@dimen/dp_8"
-            android:drawableTop="@mipmap/ic_launcher_round"
             android:gravity="center"
             android:text="@string/app_name"
             android:textAllCaps="false"
