--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -16,6 +16,11 @@
             android:title="@string/nav_my_collect" />
 
         <item
+            android:id="@+id/nav_share"
+            android:icon="@drawable/ic_share_white_24dp"
+            android:title="我的分享" />
+
+        <item
             android:id="@+id/nav_todo"
             android:icon="@drawable/ic_todo_default_24dp"
             android:title="@string/nav_todo" />
