--- a/app/src/main/res/menu/menu_share.xml
+++ b/app/src/main/res/menu/menu_share.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_share_article"
+        android:id="@+id/action_add"
         android:enabled="true"
-        android:title="@string/action_share"
+        android:icon="@drawable/fab_add"
+        android:title="@string/add"
         app:showAsAction="always" />
 </menu>
