增加分享文章

--- a/app/src/main/res/values/notranslate.xml
+++ b/app/src/main/res/values/notranslate.xml
@@ -20,4 +20,10 @@
     <string name="nav_line_4" translatable="false">----</string>
     <string name="nav_line_2" translatable="false">--</string>
 
+    <string name="share_article_tip" translatable="false">1. 只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场 tab;
+\n2. CSDN，掘金，简书等官方博客站点会直接通过，不需要审核;
+\n3. 其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响;
+\n4. 目前处于测试阶段，如果你发现500等错误，可以向我提交日志，让我们一起使网站变得更好。
+\n5. 由于本站只有我一个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系...</string>
+
 </resources>
