--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -18,7 +18,7 @@
         <item
             android:id="@+id/nav_share"
             android:icon="@drawable/ic_share_white_24dp"
-            android:title="我的分享" />
+            android:title="@string/my_share" />
 
         <item
             android:id="@+id/nav_todo"
