调整广场和体系的位置

--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -8,10 +8,10 @@
         android:title="@string/home"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_knowledge_system"
+        android:id="@+id/action_square"
         android:enabled="true"
-        android:icon="@drawable/ic_apps_black_24dp"
-        android:title="@string/knowledge_system"
+        android:icon="@drawable/ic_square_black_24dp"
+        android:title="@string/square"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_wechat"
@@ -20,11 +20,17 @@
         android:title="@string/wechat"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_navigation"
+        android:id="@+id/action_knowledge_system"
         android:enabled="true"
-        android:icon="@drawable/ic_navigation_black_24dp"
-        android:title="@string/navigation"
+        android:icon="@drawable/ic_apps_black_24dp"
+        android:title="@string/knowledge_system"
         app:showAsAction="ifRoom" />
+<!--    <item-->
+<!--        android:id="@+id/action_navigation"-->
+<!--        android:enabled="true"-->
+<!--        android:icon="@drawable/ic_navigation_black_24dp"-->
+<!--        android:title="@string/navigation"-->
+<!--        app:showAsAction="ifRoom" />-->
     <item
         android:id="@+id/action_project"
         android:enabled="true"
