--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -17,15 +17,10 @@
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            style="@style/MyTabLayoutStyle"
             android:theme="@style/AppTheme.AppBarOverlay"
             app:tabGravity="center"
-            app:tabIndicatorColor="@color/white"
-            app:tabIndicatorHeight="@dimen/dp_2"
-            app:tabMode="scrollable"
-            app:tabTextAppearance="@style/TabTextStyle" />
+            app:tabMode="scrollable" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
