--- a/app/src/main/res/layout/activity_knowledge.xml
+++ b/app/src/main/res/layout/activity_knowledge.xml
@@ -22,15 +22,10 @@
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            style="@style/MyTabLayoutStyle"
             android:theme="@style/AppTheme.AppBarOverlay"
             app:tabGravity="center"
-            app:tabIndicatorColor="@color/white"
-            app:tabIndicatorHeight="@dimen/dp_2"
-            app:tabMode="scrollable"
-            app:tabTextAppearance="@style/TabTextStyle" />
+            app:tabMode="scrollable" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -39,8 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_marginBottom="@dimen/dp_20"
         android:layout_marginRight="@dimen/dp_20"
+        android:layout_marginBottom="@dimen/dp_20"
         app:layout_behavior="com.cxz.wanandroid.widget.behavior.ScaleDownShowBehavior"
         app:srcCompat="@drawable/ic_arrow_upward_white_24dp" />
 
