广场列表页增加新增按钮

--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -20,17 +20,11 @@
         android:title="@string/wechat"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_knowledge_system"
+        android:id="@+id/action_system"
         android:enabled="true"
         android:icon="@drawable/ic_apps_black_24dp"
         android:title="@string/knowledge_system"
         app:showAsAction="ifRoom" />
-<!--    <item-->
-<!--        android:id="@+id/action_navigation"-->
-<!--        android:enabled="true"-->
-<!--        android:icon="@drawable/ic_navigation_black_24dp"-->
-<!--        android:title="@string/navigation"-->
-<!--        app:showAsAction="ifRoom" />-->
     <item
         android:id="@+id/action_project"
         android:enabled="true"
