--- a/app/src/main/res/layout/item_share_list.xml
+++ b/app/src/main/res/layout/item_share_list.xml
@@ -8,6 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="0dp"
         android:paddingTop="@dimen/item_content_padding"
         android:paddingEnd="@dimen/item_content_padding"
         android:paddingBottom="@dimen/item_content_padding">
@@ -63,12 +64,29 @@
             tools:visibility="visible" />
 
         <TextView
+            android:id="@+id/tv_article_audit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_10"
+            android:layout_toEndOf="@+id/tv_article_tag"
+            android:background="@drawable/bg_tag"
+            android:paddingLeft="@dimen/dp_4"
+            android:paddingTop="@dimen/dp_2"
+            android:paddingRight="@dimen/dp_4"
+            android:paddingBottom="@dimen/dp_2"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/sp_10"
+            android:visibility="gone"
+            tools:text="@string/app_name"
+            tools:visibility="visible" />
+
+        <TextView
             android:id="@+id/tv_article_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/tv_article_top"
             android:layout_marginStart="@dimen/dp_10"
-            android:layout_toEndOf="@+id/tv_article_tag"
+            android:layout_toEndOf="@+id/tv_article_audit"
             android:textColor="@color/item_author"
             android:textSize="@dimen/item_tv_author"
             tools:text="@string/app_name" />
