--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -35,10 +35,10 @@
             android:icon="@drawable/ic_setting_24dp"
             android:title="@string/nav_setting" />
 
-        <item
-            android:id="@+id/nav_about_us"
-            android:icon="@drawable/ic_about_us_white_24dp"
-            android:title="@string/nav_about_us" />
+<!--        <item-->
+<!--            android:id="@+id/nav_about_us"-->
+<!--            android:icon="@drawable/ic_about_us_white_24dp"-->
+<!--            android:title="@string/nav_about_us" />-->
 
         <item
             android:id="@+id/nav_logout"
