--- a/app/src/main/res/drawable/ic_share_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_share_white_24dp.xml
@@ -1,18 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="1024"
-    android:viewportHeight="1024">
-  <path
-      android:pathData="M779.64,954.18h-535.27A174.78,174.78 0,0 1,69.82 779.64v-535.27A174.78,174.78 0,0 1,244.36 69.82H512a34.91,34.91 0,0 1,0 69.82H244.36A104.96,104.96 0,0 0,139.64 244.36v535.27a104.96,104.96 0,0 0,104.73 104.73h535.27a104.96,104.96 0,0 0,104.73 -104.73V512a34.91,34.91 0,0 1,69.82 0v267.64a174.78,174.78 0,0 1,-174.55 174.55z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M500.36,558.55a35.14,35.14 0,0 1,-24.67 -10.24,34.68 34.68,0 0,1 0,-49.34l418.91,-418.91a34.91,34.91 0,0 1,49.34 49.34l-418.91,418.91a35.14,35.14 0,0 1,-24.67 10.24z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M919.27,139.64h-186.18a34.91,34.91 0,0 1,0 -69.82h186.18a34.91,34.91 0,0 1,0 69.82z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M919.27,325.82a34.91,34.91 0,0 1,-34.91 -34.91v-186.18a34.91,34.91 0,0 1,69.82 0v186.18a34.91,34.91 0,0 1,-34.91 34.91z"
-      android:fillColor="#ffffff"/>
+<vector android:height="24dp" android:viewportHeight="1024"
+    android:viewportWidth="1024" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#ffffff" android:pathData="M814.93,900.27H177.07c-46.93,0 -85.33,-38.4 -85.33,-85.33v-597.33c0,-46.93 38.4,-85.33 85.33,-85.33h458.67c12.8,0 21.33,8.53 21.33,21.33s-8.53,21.33 -21.33,21.33H177.07c-23.47,0 -42.67,19.2 -42.67,42.67v597.33c0,23.47 19.2,42.67 42.67,42.67h637.87c23.47,0 42.67,-19.2 42.67,-42.67v-204.8c0,-12.8 8.53,-21.33 21.33,-21.33s21.33,8.53 21.33,21.33v204.8c0,46.93 -38.4,85.33 -85.33,85.33zM953.6,339.2c-6.4,0 -12.8,-2.13 -17.07,-6.4l-151.47,-172.8c-8.53,-8.53 -6.4,-21.33 2.13,-29.87 8.53,-8.53 21.33,-6.4 29.87,2.13l151.47,172.8c8.53,8.53 6.4,21.33 -2.13,29.87 -4.27,2.13 -8.53,4.27 -12.8,4.27z"/>
+    <path android:fillColor="#ffffff" android:pathData="M802.13,512c-4.27,0 -10.67,-2.13 -14.93,-4.27 -8.53,-8.53 -10.67,-21.33 -2.13,-29.87l151.47,-172.8c8.53,-8.53 21.33,-10.67 29.87,-2.13 8.53,8.53 10.67,21.33 2.13,29.87l-151.47,172.8c-2.13,4.27 -8.53,6.4 -14.93,6.4z"/>
+    <path android:fillColor="#ffffff" android:pathData="M514.13,552.53c-2.13,0 -6.4,0 -8.53,-2.13 -10.67,-4.27 -14.93,-17.07 -10.67,-27.73C554.67,377.6 697.6,283.73 853.33,283.73c29.87,0 59.73,4.27 87.47,10.67 10.67,2.13 19.2,14.93 17.07,25.6 -2.13,10.67 -14.93,19.2 -25.6,17.07 -25.6,-6.4 -51.2,-8.53 -78.93,-8.53 -140.8,0 -266.67,83.2 -322.13,211.2 -2.13,6.4 -10.67,12.8 -17.07,12.8z"/>
+    <path android:fillColor="#ffffff" android:pathData="M484.27,650.67m-32,0a32,32 0,1 0,64 0,32 32,0 1,0 -64,0Z"/>
 </vector>
