修改我的分享列表点击打开网页

--- a/app/src/main/res/layout/item_share_list.xml
+++ b/app/src/main/res/layout/item_share_list.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <RelativeLayout
+        android:id="@+id/rl_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="0dp"
