增加 WebView 打开网页的夜间模式

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,6 +8,7 @@
     <color name="windowBackground">@color/Grey900</color>
     <color name="line_divider">@color/Grey700</color>
     <color name="list_divider">@color/Grey600</color>
+    <color name="mask_color">#111111</color>
 
     <color name="common_color">@color/Grey300</color>
     <color name="item_title">@color/Grey300</color>
