--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cxz.wanandroid.widget.WebContainer xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cl_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,4 +10,4 @@
 
     <!--<include layout="@layout/container" />-->
 
-</android.support.design.widget.CoordinatorLayout>
+</com.cxz.wanandroid.widget.WebContainer>
