--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="windowBackground">@color/Grey100</color>
     <color name="line_divider">@color/Grey300</color>
     <color name="list_divider">@color/Grey400</color>
+    <color name="mask_color">#f5f5f5</color>
 
     <!-- item -->
     <color name="common_color">#19191B</color>
