--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -15,14 +15,14 @@
         android:background="@color/viewBackground"
         android:orientation="vertical">
 
-        <android.support.design.widget.TabLayout
+        <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             style="@style/MyTabLayoutStyle"
             android:theme="@style/AppTheme.AppBarOverlay"
             app:tabGravity="center"
             app:tabMode="scrollable" />
 
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
