--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.cxz.multiplestatusview.MultipleStatusView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cxz.multipleview.MultipleStatusView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/multiple_status_view"
@@ -41,4 +41,4 @@
 
     </LinearLayout>
 
-</com.cxz.multiplestatusview.MultipleStatusView>
+</com.cxz.multipleview.MultipleStatusView>
